[Feat] Improved code structure in general, improved adherence to the requirements